// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Breadcrumb props 1`] = `
Object {
  "aria-label": "Breadcrumb",
  "children": <Context.Provider
    value={
      Object {
        "overrides": undefined,
      }
    }
  >
    <ForwardRef
      isOrdered={true}
      listStyleType="none"
      orientation="horizontal"
    />
  </Context.Provider>,
  "className": "css-13h683e css-1pwrqjj css-3ekj6a fp-Box fp-Navigation fp-Breadcrumb",
  "role": "navigation",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-5 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

abbr.emotion-16 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-16 {
  font-family: monospace;
}

i.emotion-16 {
  font-style: italic;
}

kbd.emotion-16 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-16 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-16 {
  font-weight: bold;
}

sub.emotion-16,
sup.emotion-16 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-16,
u.emotion-16 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-16,
cite.emotion-16,
var.emotion-16,
em.emotion-16 {
  font-style: italic;
}

kbd.emotion-16,
pre.emotion-16,
samp.emotion-16 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-16 .fp-Icon {
  vertical-align: -0.125em;
}

<div
  aria-label="Breadcrumb"
  class="emotion-0 emotion-2 emotion-3 fp-Box fp-Navigation fp-Breadcrumb"
>
  <li
    class="emotion-4 emotion-5 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
  >
    <a
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
      href="#"
    >
      Home
    </a>
  </li>
  <li
    class="emotion-4 emotion-5 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
  >
    <a
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
      href="#"
    >
      Business
    </a>
  </li>
  <li
    class="emotion-4 emotion-5 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
  >
    <span
      aria-current="page"
      class="emotion-16 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
    >
      Staff Members
    </span>
  </li>
</div>
`;

exports[`composition use should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-32 {
  list-style-type: none !important;
}

.emotion-30 {
  list-style: unset;
  list-style-type: none;
}

.emotion-30:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-30 .emotion-30 {
  margin-left: 1rem;
}

.emotion-30 {
  list-style-type: decimal;
}

.emotion-30 .emotion-30 {
  list-style-type: lower-alpha;
}

.emotion-30 .emotion-30 .emotion-30 {
  list-style-type: lower-roman;
}

.emotion-30.emotion-30.emotion-30 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-30.emotion-30.emotion-30 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-8:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-22 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-22 {
  font-family: monospace;
}

i.emotion-22 {
  font-style: italic;
}

kbd.emotion-22 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-22 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-22 {
  font-weight: bold;
}

sub.emotion-22,
sup.emotion-22 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-22,
u.emotion-22 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-22,
cite.emotion-22,
var.emotion-22,
em.emotion-22 {
  font-style: italic;
}

kbd.emotion-22,
pre.emotion-22,
samp.emotion-22 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-2 emotion-3 fp-Box fp-Navigation fp-Breadcrumb"
>
  <ol
    class="emotion-30 emotion-2 emotion-32 fp-Box fp-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-22 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-32 {
  list-style-type: none !important;
}

.emotion-30 {
  list-style: unset;
  list-style-type: none;
}

.emotion-30:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-30 .emotion-30 {
  margin-left: 1rem;
}

.emotion-30 {
  list-style-type: decimal;
}

.emotion-30 .emotion-30 {
  list-style-type: lower-alpha;
}

.emotion-30 .emotion-30 .emotion-30 {
  list-style-type: lower-roman;
}

.emotion-30.emotion-30.emotion-30 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-30.emotion-30.emotion-30 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-8:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-22 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-22 {
  font-family: monospace;
}

i.emotion-22 {
  font-style: italic;
}

kbd.emotion-22 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-22 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-22 {
  font-weight: bold;
}

sub.emotion-22,
sup.emotion-22 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-22,
u.emotion-22 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-22,
cite.emotion-22,
var.emotion-22,
em.emotion-22 {
  font-style: italic;
}

kbd.emotion-22,
pre.emotion-22,
samp.emotion-22 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-2 emotion-3 test fp-Box fp-Navigation fp-Breadcrumb"
>
  <ol
    class="emotion-30 emotion-2 emotion-32 fp-Box fp-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-22 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`defaultProps should render correctly for className 2`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-32 {
  list-style-type: none !important;
}

.emotion-30 {
  list-style: unset;
  list-style-type: none;
}

.emotion-30:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-30 .emotion-30 {
  margin-left: 1rem;
}

.emotion-30 {
  list-style-type: decimal;
}

.emotion-30 .emotion-30 {
  list-style-type: lower-alpha;
}

.emotion-30 .emotion-30 .emotion-30 {
  list-style-type: lower-roman;
}

.emotion-30.emotion-30.emotion-30 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-30.emotion-30.emotion-30 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-8:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-22 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-22 {
  font-family: monospace;
}

i.emotion-22 {
  font-style: italic;
}

kbd.emotion-22 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-22 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-22 {
  font-weight: bold;
}

sub.emotion-22,
sup.emotion-22 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-22,
u.emotion-22 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-22,
cite.emotion-22,
var.emotion-22,
em.emotion-22 {
  font-style: italic;
}

kbd.emotion-22,
pre.emotion-22,
samp.emotion-22 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-2 emotion-3 fp-Box fp-Navigation fp-Breadcrumb"
>
  <ol
    class="emotion-30 emotion-2 emotion-32 fp-Box fp-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 test fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 test fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 test fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-22 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`defaultProps should render correctly for separator 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-32 {
  list-style-type: none !important;
}

.emotion-30 {
  list-style: unset;
  list-style-type: none;
}

.emotion-30:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-30 .emotion-30 {
  margin-left: 1rem;
}

.emotion-30 {
  list-style-type: decimal;
}

.emotion-30 .emotion-30 {
  list-style-type: lower-alpha;
}

.emotion-30 .emotion-30 .emotion-30 {
  list-style-type: lower-roman;
}

.emotion-30.emotion-30.emotion-30 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-30.emotion-30.emotion-30 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-8:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-22 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-22 {
  font-family: monospace;
}

i.emotion-22 {
  font-style: italic;
}

kbd.emotion-22 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-22 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-22 {
  font-weight: bold;
}

sub.emotion-22,
sup.emotion-22 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-22,
u.emotion-22 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-22,
cite.emotion-22,
var.emotion-22,
em.emotion-22 {
  font-style: italic;
}

kbd.emotion-22,
pre.emotion-22,
samp.emotion-22 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-2 emotion-3 fp-Box fp-Navigation fp-Breadcrumb"
>
  <ol
    class="emotion-30 emotion-2 emotion-32 fp-Box fp-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        -
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        -
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-22 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`overrides Breadcrumb.Item.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-32 {
  list-style-type: none !important;
}

.emotion-30 {
  list-style: unset;
  list-style-type: none;
}

.emotion-30:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-30 .emotion-30 {
  margin-left: 1rem;
}

.emotion-30 {
  list-style-type: decimal;
}

.emotion-30 .emotion-30 {
  list-style-type: lower-alpha;
}

.emotion-30 .emotion-30 .emotion-30 {
  list-style-type: lower-roman;
}

.emotion-30.emotion-30.emotion-30 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-30.emotion-30.emotion-30 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-8:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-22 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-22 {
  font-family: monospace;
}

i.emotion-22 {
  font-style: italic;
}

kbd.emotion-22 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-22 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-22 {
  font-weight: bold;
}

sub.emotion-22,
sup.emotion-22 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-22,
u.emotion-22 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-22,
cite.emotion-22,
var.emotion-22,
em.emotion-22 {
  font-style: italic;
}

kbd.emotion-22,
pre.emotion-22,
samp.emotion-22 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-7 {
  background-color: red;
}

.emotion-18.emotion-18.emotion-18.emotion-18.emotion-18:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-18 {
  background-color: blue;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-2 emotion-3 fp-Box fp-Navigation fp-Breadcrumb"
>
  <ol
    class="emotion-30 emotion-2 emotion-32 fp-Box fp-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-18 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-22 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`overrides Breadcrumb.Link.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-32 {
  list-style-type: none !important;
}

.emotion-30 {
  list-style: unset;
  list-style-type: none;
}

.emotion-30:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-30 .emotion-30 {
  margin-left: 1rem;
}

.emotion-30 {
  list-style-type: decimal;
}

.emotion-30 .emotion-30 {
  list-style-type: lower-alpha;
}

.emotion-30 .emotion-30 .emotion-30 {
  list-style-type: lower-roman;
}

.emotion-30.emotion-30.emotion-30 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-30.emotion-30.emotion-30 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-8:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-22 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-22 {
  font-family: monospace;
}

i.emotion-22 {
  font-style: italic;
}

kbd.emotion-22 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-22 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-22 {
  font-weight: bold;
}

sub.emotion-22,
sup.emotion-22 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-22,
u.emotion-22 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-22,
cite.emotion-22,
var.emotion-22,
em.emotion-22 {
  font-style: italic;
}

kbd.emotion-22,
pre.emotion-22,
samp.emotion-22 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  background-color: red;
}

.emotion-11 {
  background-color: blue;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-33 emotion-2 emotion-3 fp-Box fp-Navigation fp-Breadcrumb"
>
  <ol
    class="emotion-30 emotion-2 emotion-32 fp-Box fp-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-11 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-22 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`overrides Breadcrumb.Separator.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-32 {
  list-style-type: none !important;
}

.emotion-30 {
  list-style: unset;
  list-style-type: none;
}

.emotion-30:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-30 .emotion-30 {
  margin-left: 1rem;
}

.emotion-30 {
  list-style-type: decimal;
}

.emotion-30 .emotion-30 {
  list-style-type: lower-alpha;
}

.emotion-30 .emotion-30 .emotion-30 {
  list-style-type: lower-roman;
}

.emotion-30.emotion-30.emotion-30 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-30.emotion-30.emotion-30 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-8:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

abbr.emotion-22 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-22 {
  font-family: monospace;
}

i.emotion-22 {
  font-style: italic;
}

kbd.emotion-22 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-22 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-22 {
  font-weight: bold;
}

sub.emotion-22,
sup.emotion-22 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-22,
u.emotion-22 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-22,
cite.emotion-22,
var.emotion-22,
em.emotion-22 {
  font-style: italic;
}

kbd.emotion-22,
pre.emotion-22,
samp.emotion-22 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  display: inline;
  margin-left: 0.5rem;
}

.emotion-4 {
  background-color: red;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-2 emotion-3 fp-Box fp-Navigation fp-Breadcrumb"
>
  <ol
    class="emotion-30 emotion-2 emotion-32 fp-Box fp-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-22 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`overrides Breadcrumb.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-32 {
  list-style-type: none !important;
}

.emotion-30 {
  list-style: unset;
  list-style-type: none;
}

.emotion-30:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-30 .emotion-30 {
  margin-left: 1rem;
}

.emotion-30 {
  list-style-type: decimal;
}

.emotion-30 .emotion-30 {
  list-style-type: lower-alpha;
}

.emotion-30 .emotion-30 .emotion-30 {
  list-style-type: lower-roman;
}

.emotion-30.emotion-30.emotion-30 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-30.emotion-30.emotion-30 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-8:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-22 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-22 {
  font-family: monospace;
}

i.emotion-22 {
  font-style: italic;
}

kbd.emotion-22 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-22 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-22 {
  font-weight: bold;
}

sub.emotion-22,
sup.emotion-22 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-22,
u.emotion-22 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-22,
cite.emotion-22,
var.emotion-22,
em.emotion-22 {
  font-style: italic;
}

kbd.emotion-22,
pre.emotion-22,
samp.emotion-22 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-33 {
  background-color: red;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-33 emotion-0 emotion-2 emotion-3 fp-Box fp-Navigation fp-Breadcrumb"
>
  <ol
    class="emotion-30 emotion-2 emotion-32 fp-Box fp-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-22 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`props should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-32 {
  list-style-type: none !important;
}

.emotion-30 {
  list-style: unset;
  list-style-type: none;
}

.emotion-30:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-30 .emotion-30 {
  margin-left: 1rem;
}

.emotion-30 {
  list-style-type: decimal;
}

.emotion-30 .emotion-30 {
  list-style-type: lower-alpha;
}

.emotion-30 .emotion-30 .emotion-30 {
  list-style-type: lower-roman;
}

.emotion-30.emotion-30.emotion-30 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-30.emotion-30.emotion-30 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-8:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-22 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-22 {
  font-family: monospace;
}

i.emotion-22 {
  font-style: italic;
}

kbd.emotion-22 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-22 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-22 {
  font-weight: bold;
}

sub.emotion-22,
sup.emotion-22 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-22,
u.emotion-22 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-22,
cite.emotion-22,
var.emotion-22,
em.emotion-22 {
  font-style: italic;
}

kbd.emotion-22,
pre.emotion-22,
samp.emotion-22 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-2 emotion-3 fp-Box fp-Navigation fp-Breadcrumb"
>
  <ol
    class="emotion-30 emotion-2 emotion-32 fp-Box fp-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-22 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-32 {
  list-style-type: none !important;
}

.emotion-30 {
  list-style: unset;
  list-style-type: none;
}

.emotion-30:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-30 .emotion-30 {
  margin-left: 1rem;
}

.emotion-30 {
  list-style-type: decimal;
}

.emotion-30 .emotion-30 {
  list-style-type: lower-alpha;
}

.emotion-30 .emotion-30 .emotion-30 {
  list-style-type: lower-roman;
}

.emotion-30.emotion-30.emotion-30 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-30.emotion-30.emotion-30 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-8:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-22 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-22 {
  font-family: monospace;
}

i.emotion-22 {
  font-style: italic;
}

kbd.emotion-22 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-22 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-22 {
  font-weight: bold;
}

sub.emotion-22,
sup.emotion-22 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-22,
u.emotion-22 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-22,
cite.emotion-22,
var.emotion-22,
em.emotion-22 {
  font-style: italic;
}

kbd.emotion-22,
pre.emotion-22,
samp.emotion-22 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-2 emotion-3 fp-Box fp-Navigation fp-Breadcrumb"
>
  <ol
    class="emotion-30 emotion-2 emotion-32 fp-Box fp-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-22 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`theming Breadcrumb.Item.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-32 {
  list-style-type: none !important;
}

.emotion-30 {
  list-style: unset;
  list-style-type: none;
}

.emotion-30:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-30 .emotion-30 {
  margin-left: 1rem;
}

.emotion-30 {
  list-style-type: decimal;
}

.emotion-30 .emotion-30 {
  list-style-type: lower-alpha;
}

.emotion-30 .emotion-30 .emotion-30 {
  list-style-type: lower-roman;
}

.emotion-30.emotion-30.emotion-30 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-30.emotion-30.emotion-30 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-8:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-22 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-22 {
  font-family: monospace;
}

i.emotion-22 {
  font-style: italic;
}

kbd.emotion-22 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-22 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-22 {
  font-weight: bold;
}

sub.emotion-22,
sup.emotion-22 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-22,
u.emotion-22 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-22,
cite.emotion-22,
var.emotion-22,
em.emotion-22 {
  font-style: italic;
}

kbd.emotion-22,
pre.emotion-22,
samp.emotion-22 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-7 {
  background-color: red;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-2 emotion-3 fp-Box fp-Navigation fp-Breadcrumb"
>
  <ol
    class="emotion-30 emotion-2 emotion-32 fp-Box fp-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-22 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`theming Breadcrumb.Link.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-32 {
  list-style-type: none !important;
}

.emotion-30 {
  list-style: unset;
  list-style-type: none;
}

.emotion-30:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-30 .emotion-30 {
  margin-left: 1rem;
}

.emotion-30 {
  list-style-type: decimal;
}

.emotion-30 .emotion-30 {
  list-style-type: lower-alpha;
}

.emotion-30 .emotion-30 .emotion-30 {
  list-style-type: lower-roman;
}

.emotion-30.emotion-30.emotion-30 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-30.emotion-30.emotion-30 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-8:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-22 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-22 {
  font-family: monospace;
}

i.emotion-22 {
  font-style: italic;
}

kbd.emotion-22 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-22 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-22 {
  font-weight: bold;
}

sub.emotion-22,
sup.emotion-22 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-22,
u.emotion-22 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-22,
cite.emotion-22,
var.emotion-22,
em.emotion-22 {
  font-style: italic;
}

kbd.emotion-22,
pre.emotion-22,
samp.emotion-22 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  background-color: red;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-33 emotion-2 emotion-3 fp-Box fp-Navigation fp-Breadcrumb"
>
  <ol
    class="emotion-30 emotion-2 emotion-32 fp-Box fp-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-22 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`theming Breadcrumb.Separator.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-32 {
  list-style-type: none !important;
}

.emotion-30 {
  list-style: unset;
  list-style-type: none;
}

.emotion-30:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-30 .emotion-30 {
  margin-left: 1rem;
}

.emotion-30 {
  list-style-type: decimal;
}

.emotion-30 .emotion-30 {
  list-style-type: lower-alpha;
}

.emotion-30 .emotion-30 .emotion-30 {
  list-style-type: lower-roman;
}

.emotion-30.emotion-30.emotion-30 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-30.emotion-30.emotion-30 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-8:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

abbr.emotion-22 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-22 {
  font-family: monospace;
}

i.emotion-22 {
  font-style: italic;
}

kbd.emotion-22 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-22 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-22 {
  font-weight: bold;
}

sub.emotion-22,
sup.emotion-22 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-22,
u.emotion-22 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-22,
cite.emotion-22,
var.emotion-22,
em.emotion-22 {
  font-style: italic;
}

kbd.emotion-22,
pre.emotion-22,
samp.emotion-22 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  display: inline;
  margin-left: 0.5rem;
}

.emotion-4 {
  background-color: red;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-2 emotion-3 fp-Box fp-Navigation fp-Breadcrumb"
>
  <ol
    class="emotion-30 emotion-2 emotion-32 fp-Box fp-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-22 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`theming Breadcrumb.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-32 {
  list-style-type: none !important;
}

.emotion-30 {
  list-style: unset;
  list-style-type: none;
}

.emotion-30:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-30 .emotion-30 {
  margin-left: 1rem;
}

.emotion-30 {
  list-style-type: decimal;
}

.emotion-30 .emotion-30 {
  list-style-type: lower-alpha;
}

.emotion-30 .emotion-30 .emotion-30 {
  list-style-type: lower-roman;
}

.emotion-30.emotion-30.emotion-30 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-30.emotion-30.emotion-30 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-8:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-1:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-1:focus {
  outline-style: dashed;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-22 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-22 {
  font-family: monospace;
}

i.emotion-22 {
  font-style: italic;
}

kbd.emotion-22 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-22 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-22 {
  font-weight: bold;
}

sub.emotion-22,
sup.emotion-22 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-22,
u.emotion-22 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-22,
cite.emotion-22,
var.emotion-22,
em.emotion-22 {
  font-style: italic;
}

kbd.emotion-22,
pre.emotion-22,
samp.emotion-22 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-33 {
  background-color: red;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-33 emotion-0 emotion-2 emotion-3 fp-Box fp-Navigation fp-Breadcrumb"
>
  <ol
    class="emotion-30 emotion-2 emotion-32 fp-Box fp-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Link fp-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-ListItem fp-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-22 emotion-2 emotion-3 emotion-0 fp-Box fp-Text fp-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;
